Communication between server and client works

--- a/tic-tac-toe.cabal
+++ b/tic-tac-toe.cabal
@@ -28,6 +28,7 @@ executable client
                         containers,
                         servant-server,
                         servant-client,
+                        servant,
                         random,
                         aeson,
                         http-api-data,
